--- a/Property FW and wreath products/Bouts/Introduction.tex
+++ b/Property FW and wreath products/Bouts/Introduction.tex
@@ -20,7 +20,7 @@
 %
 %
 %
-Property FW is a group property that is (for discrete groups) a weakening of the celebrated Kazdhan's property (T). It was introduced by Barnhill and Chatterji in \cite{}\todo{Give ref (cf article de Cornulier)} and studied extensively by Cornulier in \cite{Cornulier2013}. It is a fixed point property for actions on wall spaces and hence stands between property FH (fixed points on Hilbert spaces, equivalent to property (T) for discrete groups) and property FA (fixed points on \emph{arbres}\footnote{\emph{Arbres} being the french word for trees.}), see \cite{Cornulier2013} for more details.
+Property FW is a group property that is (for discrete groups) a weakening of the celebrated Kazdhan's property (T). It was introduced by Barnhill and Chatterji in \cite{Barnhill2008} and studied extensively by Cornulier in \cite{Cornulier2013}. It is a fixed point property for actions on wall spaces and hence stands between property FH (fixed points on Hilbert spaces, equivalent to property (T) for discrete groups) and property FA (fixed points on \emph{arbres}\footnote{\emph{Arbres} being the french word for trees.}), see \cite{Cornulier2013} for more details.
 
 When working with group properties, it is natural to ask if they are stable under ``natural'' group operations. For example, one may wonder when a property is stable by subgroups, quotients, direct products or semi-direct products.
 A slightly less common operation, but still of great use in geometric group theory, is the wreath product, see Definition~\ref{Def:WreathProd}.
@@ -60,8 +60,8 @@ The next section contains all the definitions as well as some examples, while Se
 %
 \todo[inline]{Mettre ici les remerciements. Tu dois possiblement remercier la NSF. J'ai mis Alain en remerciement, je ne sais pas ce que tu en penses et si tu veux être plus spécifique.}
 \paragraph{Acknowledgment}
-The author are thankful to A. Valette for comments on a previous version of this note.
-The first author was supported by NSF Grant No. 200021\textunderscore188578.
+The authors are thankful to A. Valette for comments on a previous version of this note.
+The first author was supported by NSF Grant No. 200021\textunderscore188578. The secound author would thanks Tatiana Nagnibeda for her comments and the SNF for its support.
 %
 %
 %
