--- a/Property FW and wreath products/Bouts/biblio.bib
+++ b/Property FW and wreath products/Bouts/biblio.bib
@@ -1,114 +1,204 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Grégoire Schneeberger at 2020-10-31 18:37:07 +0100 
+%% Created for Grégoire Schneeberger at 2021-01-06 19:56:32 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{Leemann2020,
+	abstract = {We prove that every connected locally finite regular graph has a double cover which is isomorphic to a Schreier graph.},
+	archiveprefix = {arXiv},
+	arxivid = {2010.06431},
+	author = {Leemann, Paul-Henry},
+	date-added = {2021-01-06 19:55:31 +0100},
+	date-modified = {2021-01-06 19:55:31 +0100},
+	eprint = {2010.06431},
+	file = {::},
+	mendeley-groups = {Property{\_}FW{\_}and{\_}wreath{\_}product},
+	month = {oct},
+	title = {{Up to a double cover, every regular connected graph is isomorphic to a Schreier graph. (arXiv:2010.06431v1 [math.CO])}},
+	url = {http://arxiv.org/abs/2010.06431},
+	year = {2020},
+	Bdsk-Url-1 = {http://arxiv.org/abs/2010.06431}}
+
+@book{Lubotzky2010,
+	annote = {With an appendix by Jonathan D. Rogawski,
+Reprint of the 1994 edition},
+	author = {Lubotzky, Alexander},
+	date-added = {2021-01-06 19:52:47 +0100},
+	date-modified = {2021-01-06 19:53:06 +0100},
+	doi = {10.1007/978-3-0346-0332-4},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Lubotzky/Lubotzky - 2010 - Discrete groups, expanding graphs and invariant measures.pdf:pdf},
+	isbn = {978-3-0346-0331-7},
+	mendeley-groups = {Books},
+	pages = {iii+192},
+	publisher = {Birkh{\"{a}}user Verlag, Basel},
+	series = {Modern Birkh{\"{a}}user Classics},
+	title = {{Discrete groups, expanding graphs and invariant measures}},
+	url = {https://doi.org/10.1007/978-3-0346-0332-4},
+	year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-0346-0332-4}}
+
+@book{Stallings1971,
+	annote = {A James K. Whittemore Lecture in Mathematics given at Yale
+University, 1969,
+Yale Mathematical Monographs, 4},
+	author = {Stallings, John},
+	date-added = {2021-01-06 19:40:50 +0100},
+	date-modified = {2021-01-06 19:40:50 +0100},
+	edition = {Yale Mathe},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Stallings/Stallings - 1971 - Group theory and three-dimensional manifolds.pdf:pdf},
+	mendeley-groups = {Ends,Neuchatel},
+	pages = {v+65},
+	publisher = {Yale University Press, New Haven, Conn.-London},
+	title = {{Group theory and three-dimensional manifolds}},
+	year = {1971}}
+
 @article{Cornulier2011,
-	Abstract = {We characterize permutational wreath products with Property (FA). For instance, we show that the standard wreath product A B of two non-trivial countable groups A and B has Property (FA) if and only if B has Property (FA) and A is a finitely generated group with finite abelianization. We also prove an analogous result for hereditary Property (FA). On the other hand, we prove that many wreath products with hereditary Property (FA) are not quotients of finitely presented groups with the same property. {\textcopyright} de Gruyter 2011.},
-	Author = {Cornulier, Yves and Kar, Aditi},
-	Date-Added = {2020-10-31 18:22:14 +0100},
-	Date-Modified = {2020-10-31 18:22:14 +0100},
-	Doi = {10.1515/JGT.2010.044},
-	File = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Cornulier, Kar/Cornulier, Kar - 2011 - On Property (FA) for wreath products.pdf:pdf},
-	Issn = {14335883},
-	Journal = {J. Gr. Theory},
-	Keywords = {Algebra and Number Theory,Discrete Mathematics,Mathematics},
-	Mendeley-Groups = {Property{\_}FW{\_}and{\_}wreath{\_}product},
-	Month = {jan},
-	Number = {1},
-	Pages = {165--174},
-	Publisher = {De Gruyter},
-	Title = {{On Property (FA) for wreath products}},
-	Url = {https://www.degruyter.com/view/journals/jgth/14/1/article-p165.xml},
-	Volume = {14},
-	Year = {2011},
+	abstract = {We characterize permutational wreath products with Property (FA). For instance, we show that the standard wreath product A B of two non-trivial countable groups A and B has Property (FA) if and only if B has Property (FA) and A is a finitely generated group with finite abelianization. We also prove an analogous result for hereditary Property (FA). On the other hand, we prove that many wreath products with hereditary Property (FA) are not quotients of finitely presented groups with the same property. {\textcopyright} de Gruyter 2011.},
+	author = {Cornulier, Yves and Kar, Aditi},
+	date-added = {2020-10-31 18:22:14 +0100},
+	date-modified = {2020-10-31 18:22:14 +0100},
+	doi = {10.1515/JGT.2010.044},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Cornulier, Kar/Cornulier, Kar - 2011 - On Property (FA) for wreath products.pdf:pdf},
+	issn = {14335883},
+	journal = {J. Gr. Theory},
+	keywords = {Algebra and Number Theory,Discrete Mathematics,Mathematics},
+	mendeley-groups = {Property{\_}FW{\_}and{\_}wreath{\_}product},
+	month = {jan},
+	number = {1},
+	pages = {165--174},
+	publisher = {De Gruyter},
+	title = {{On Property (FA) for wreath products}},
+	url = {https://www.degruyter.com/view/journals/jgth/14/1/article-p165.xml},
+	volume = {14},
+	year = {2011},
 	Bdsk-Url-1 = {https://www.degruyter.com/view/journals/jgth/14/1/article-p165.xml},
 	Bdsk-Url-2 = {https://doi.org/10.1515/JGT.2010.044}}
 
 @book{Bekka2008,
-	Author = {Bekka, Bachir and de la Harpe, Pierre and Valette, Alain},
-	Date-Added = {2020-10-31 18:22:00 +0100},
-	Date-Modified = {2020-10-31 18:22:00 +0100},
-	File = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Bekka, de la Harpe, Valette/Bekka, de la Harpe, Valette - 2008 - Kazhdan's property ({\{}T{\}}).pdf:pdf},
-	Isbn = {978-0-521-88720-5},
-	Mendeley-Groups = {Propri{\'{e}}t{\'{e}} (T),Books,Neuchatel,Property{\_}FW{\_}and{\_}wreath{\_}product},
-	Pages = {xiv+472},
-	Publisher = {Cambridge University Press, Cambridge},
-	Series = {New Mathematical Monographs},
-	Title = {{Kazhdan's property ({\{}T{\}})}},
-	Url = {https://doi.org/10.1017/CBO9780511542749},
-	Volume = {11},
-	Year = {2008},
+	author = {Bekka, Bachir and de la Harpe, Pierre and Valette, Alain},
+	date-added = {2020-10-31 18:22:00 +0100},
+	date-modified = {2020-10-31 18:22:00 +0100},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Bekka, de la Harpe, Valette/Bekka, de la Harpe, Valette - 2008 - Kazhdan's property ({\{}T{\}}).pdf:pdf},
+	isbn = {978-0-521-88720-5},
+	mendeley-groups = {Propri{\'{e}}t{\'{e}} (T),Books,Neuchatel,Property{\_}FW{\_}and{\_}wreath{\_}product},
+	pages = {xiv+472},
+	publisher = {Cambridge University Press, Cambridge},
+	series = {New Mathematical Monographs},
+	title = {{Kazhdan's property ({\{}T{\}})}},
+	url = {https://doi.org/10.1017/CBO9780511542749},
+	volume = {11},
+	year = {2008},
 	Bdsk-Url-1 = {https://doi.org/10.1017/CBO9780511542749}}
 
 @article{Bandelt1984,
-	Abstract = {An induced subgraph G of a graph H is a retract of H if there is an edge‐preserving map f from H onto G such that f|G is the identity map on G. A median graph is a connected graph such that for any three vertices u,v and w, there exists a unique vertex x which lies simultaneously on some shortest (u,v)‐, (v,w)‐, and (w,u)‐paths. It is shown that a graph G is a retract of some hypercube if and only if G is a median graph. Copyright {\textcopyright} 1984 Wiley Periodicals, Inc., A Wiley Company},
-	Author = {Bandelt, H. J.},
-	Date-Added = {2020-10-31 17:08:05 +0100},
-	Date-Modified = {2020-10-31 17:08:05 +0100},
-	Doi = {10.1002/jgt.3190080407},
-	Issn = {10970118},
-	Journal = {J. Graph Theory},
-	Mendeley-Groups = {Property{\_}FW{\_}and{\_}wreath{\_}product},
-	Number = {4},
-	Pages = {501--510},
-	Title = {{Retracts of hypercubes}},
-	Url = {http://doi.wiley.com/10.1002/jgt.3190080407},
-	Volume = {8},
-	Year = {1984},
+	abstract = {An induced subgraph G of a graph H is a retract of H if there is an edge‐preserving map f from H onto G such that f|G is the identity map on G. A median graph is a connected graph such that for any three vertices u,v and w, there exists a unique vertex x which lies simultaneously on some shortest (u,v)‐, (v,w)‐, and (w,u)‐paths. It is shown that a graph G is a retract of some hypercube if and only if G is a median graph. Copyright {\textcopyright} 1984 Wiley Periodicals, Inc., A Wiley Company},
+	author = {Bandelt, H. J.},
+	date-added = {2020-10-31 17:08:05 +0100},
+	date-modified = {2020-10-31 17:08:05 +0100},
+	doi = {10.1002/jgt.3190080407},
+	issn = {10970118},
+	journal = {J. Graph Theory},
+	mendeley-groups = {Property{\_}FW{\_}and{\_}wreath{\_}product},
+	number = {4},
+	pages = {501--510},
+	title = {{Retracts of hypercubes}},
+	url = {http://doi.wiley.com/10.1002/jgt.3190080407},
+	volume = {8},
+	year = {1984},
 	Bdsk-Url-1 = {http://doi.wiley.com/10.1002/jgt.3190080407},
 	Bdsk-Url-2 = {https://doi.org/10.1002/jgt.3190080407}}
 
 @article{Neuhauser2005a,
-	Abstract = {Let H and be two discrete groups and X be a set on which acts. We investigate when the wreath product H X has relative property (T) and give a complete characterization of property (T) for such groups. Moreover we determine a lower bound of a Kazhdan constant for H X in terms of those for H and . Property ($\tau$) of H X is also discussed in some instances.},
-	Author = {Neuhauser, Markus},
-	Doi = {10.1007/s00209-005-0794-9},
-	File = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Neuhauser/Neuhauser - 2005 - Relative property (T) and related properties of wreath products.pdf:pdf},
-	Issn = {00255874},
-	Journal = {Math. Zeitschrift},
-	Month = {sep},
-	Number = {1},
-	Pages = {167--177},
-	Publisher = {Springer-Verlag},
-	Title = {{Relative property (T) and related properties of wreath products}},
-	Url = {http://link.springer.com/10.1007/s00209-005-0794-9},
-	Volume = {251},
-	Year = {2005},
+	abstract = {Let H and be two discrete groups and X be a set on which acts. We investigate when the wreath product H X has relative property (T) and give a complete characterization of property (T) for such groups. Moreover we determine a lower bound of a Kazhdan constant for H X in terms of those for H and . Property ($\tau$) of H X is also discussed in some instances.},
+	author = {Neuhauser, Markus},
+	doi = {10.1007/s00209-005-0794-9},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Neuhauser/Neuhauser - 2005 - Relative property (T) and related properties of wreath products.pdf:pdf},
+	issn = {00255874},
+	journal = {Math. Zeitschrift},
+	month = {sep},
+	number = {1},
+	pages = {167--177},
+	publisher = {Springer-Verlag},
+	title = {{Relative property (T) and related properties of wreath products}},
+	url = {http://link.springer.com/10.1007/s00209-005-0794-9},
+	volume = {251},
+	year = {2005},
 	Bdsk-Url-1 = {http://link.springer.com/10.1007/s00209-005-0794-9},
 	Bdsk-Url-2 = {https://doi.org/10.1007/s00209-005-0794-9}}
 
 @article{Cornulier2013,
-	Abstract = {We study commensurating actions of groups and the associated properties FW and PW, in connection with wallings, median graphs, CAT(0) cubings and multi-ended Schreier graphs.},
-	Archiveprefix = {arXiv},
-	Arxivid = {1302.5982},
-	Author = {Cornulier, Yves},
-	Eprint = {1302.5982},
-	File = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Cornulier/Cornulier - 2013 - Group actions with commensurated subsets, wallings and cubings.pdf:pdf},
-	Pages = {58},
-	Title = {{Group actions with commensurated subsets, wallings and cubings}},
-	Url = {http://arxiv.org/abs/1302.5982},
-	Year = {2013},
+	abstract = {We study commensurating actions of groups and the associated properties FW and PW, in connection with wallings, median graphs, CAT(0) cubings and multi-ended Schreier graphs.},
+	archiveprefix = {arXiv},
+	arxivid = {1302.5982},
+	author = {Cornulier, Yves},
+	eprint = {1302.5982},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Cornulier/Cornulier - 2013 - Group actions with commensurated subsets, wallings and cubings.pdf:pdf},
+	pages = {58},
+	title = {{Group actions with commensurated subsets, wallings and cubings}},
+	url = {http://arxiv.org/abs/1302.5982},
+	year = {2013},
 	Bdsk-Url-1 = {http://arxiv.org/abs/1302.5982}}
 
 @article{Cherix2004,
-	Abstract = {We introduce the notion of a space with measured walls, generalizing the concept of a space with walls due to Haglund and Paulin (Simplicit{\'{e}} de groupes d'automorphismes d'espaces {\`{a}} courbure n{\'{e}}gative. Geom. Topol. Monograph 1 (1998), 181-248). We observe that if a locally compact group G acts properly on a space with measured walls, then G has the Haagerup property. We conjecture that the converse holds and we prove this conjecture for the following classes of groups: discrete groups with the Haagerup property, closed subgroups of SO(n, 1), groups acting properly on real trees, SL 2 (K) where K is a global field and amenable groups.},
-	Author = {Cherix, Pierre Alain and Martin, Florian and Valette, Alain},
-	Doi = {10.1017/S0143385704000185},
-	File = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Cherix, Martin, Valette/Cherix, Martin, Valette - 2004 - Spaces with measured walls, the Haagerup property and property (T).pdf:pdf},
-	Issn = {01433857},
-	Journal = {Ergod. Theory Dyn. Syst.},
-	Month = {dec},
-	Number = {6},
-	Pages = {1895--1908},
-	Publisher = {Cambridge University Press},
-	Title = {{Spaces with measured walls, the Haagerup property and property (T)}},
-	Url = {http://www.journals.cambridge.org/abstract{\_}S0143385704000185},
-	Volume = {24},
-	Year = {2004},
+	abstract = {We introduce the notion of a space with measured walls, generalizing the concept of a space with walls due to Haglund and Paulin (Simplicit{\'{e}} de groupes d'automorphismes d'espaces {\`{a}} courbure n{\'{e}}gative. Geom. Topol. Monograph 1 (1998), 181-248). We observe that if a locally compact group G acts properly on a space with measured walls, then G has the Haagerup property. We conjecture that the converse holds and we prove this conjecture for the following classes of groups: discrete groups with the Haagerup property, closed subgroups of SO(n, 1), groups acting properly on real trees, SL 2 (K) where K is a global field and amenable groups.},
+	author = {Cherix, Pierre Alain and Martin, Florian and Valette, Alain},
+	doi = {10.1017/S0143385704000185},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Cherix, Martin, Valette/Cherix, Martin, Valette - 2004 - Spaces with measured walls, the Haagerup property and property (T).pdf:pdf},
+	issn = {01433857},
+	journal = {Ergod. Theory Dyn. Syst.},
+	month = {dec},
+	number = {6},
+	pages = {1895--1908},
+	publisher = {Cambridge University Press},
+	title = {{Spaces with measured walls, the Haagerup property and property (T)}},
+	url = {http://www.journals.cambridge.org/abstract{\_}S0143385704000185},
+	volume = {24},
+	year = {2004},
 	Bdsk-Url-1 = {http://www.journals.cambridge.org/abstract%7B%5C_%7DS0143385704000185},
 	Bdsk-Url-2 = {https://doi.org/10.1017/S0143385704000185}}
+
+@book{Barnhill2008,
+	annote = {A gift to Guido Mislin on the occasion of his retirement from
+ETHZ June 2006,
+Collected by Indira Chatterji},
+	author = {Barnhill, Angela and Chatterji, INDIRA},
+	booktitle = {Guid. B. conjectures},
+	chapter = {9},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Barnhill, Chatterji/Barnhill, Chatterji - 2008 - Property (T) versus Property FW.pdf:pdf},
+	isbn = {2-940264-07-4},
+	publisher = {L'Enseignement Math{\'{e}}matique, Geneva},
+	series = {Monographies de L'Enseignement Math{\'{e}}matique [Monographs of L'Enseignement Math{\'{e}}matique]},
+	title = {{Property (T) versus Property FW}},
+	volume = {40},
+	year = {2008}}
+
+@book{DelaHarpe2000,
+	author = {de la Harpe, Pierre},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/de la Harpe/de la Harpe - 2000 - Topics in geometric group theory.pdf:pdf},
+	isbn = {0-226-31719-6; 0-226-31721-8},
+	mendeley-groups = {Books},
+	pages = {vi+310},
+	publisher = {University of Chicago Press, Chicago, IL},
+	series = {Chicago Lectures in Mathematics},
+	title = {{Topics in geometric group theory}},
+	year = {2000}}
+
+@incollection{Moller1995,
+	author = {M{\"{o}}ller, R{\"{o}}gnvaldur G},
+	booktitle = {Groups '93 {\{}G{\}}alway/{\{}S{\}}t. {\{}A{\}}ndrews, {\{}V{\}}ol. 2},
+	doi = {10.1017/CBO9780511629297.011},
+	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/M{\"{o}}ller/M{\"{o}}ller - 1995 - Groups acting on locally finite graphs---a survey of the infinitely ended case.pdf:pdf},
+	mendeley-groups = {Property{\_}FW{\_}and{\_}wreath{\_}product},
+	pages = {426--456},
+	publisher = {Cambridge Univ. Press, Cambridge},
+	series = {London Math. Soc. Lecture Note Ser.},
+	title = {{Groups acting on locally finite graphs---a survey of the infinitely ended case}},
+	url = {https://doi.org/10.1017/CBO9780511629297.011},
+	volume = {212},
+	year = {1995},
+	Bdsk-Url-1 = {https://doi.org/10.1017/CBO9780511629297.011}}
