--- a/Property FW and wreath products/Bouts/Definitions.tex
+++ b/Property FW and wreath products/Bouts/Definitions.tex
@@ -16,7 +16,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Definitions and examples}
 This section contains all the definitions, as well as some useful preliminaries facts and some examples.
-All the results cited in this section are standard and can be found in any good book about geometric group theory, see for example~\cite{}.\todo{Mettre ref et peut-être retravailler l'intro.} 
+All the results cited in this section are standard and can be found in any good book about geometric group theory, see for example~\cite{DelaHarpe2000}.\todo{Mettre ref et peut-être retravailler l'intro.} 
 %
 %
 %
@@ -55,7 +55,7 @@ As the notation suggest, these two definitions are the two faces of the same coi
 
 Schreier graphs are generalizations of the well-known \emph{Cayley graphs}, with $\Cayley(G;S)=\Sch(G,\{1\};S)$.
 
-If $S$ and $T$ are two generating sets of $G$, the graphs $\Sch(G,H;S)$ and $\Sch(G,H;T)$ need not to be isomorphic. However, if both $S$ and $T$ are finite, then $\Sch(G,H;S)$ and $\Sch(G,H;T)$ are quasi-isometric\todo{Put ref ?}, see Figure~\ref{Figure:CayleyOfZ} for some examples. The only fact we will use about quasi-isometries is that these preserve ``large-scale properties'' of the graph, as for examples the number of ends.
+If $S$ and $T$ are two generating sets of $G$, the graphs $\Sch(G,H;S)$ and $\Sch(G,H;T)$ need not to be isomorphic. However, if both $S$ and $T$ are finite, then $\Sch(G,H;S)$ and $\Sch(G,H;T)$ are quasi-isometric, see \cite[IV.B.21.iii]{DelaHarpe2000}, and Figure~\ref{Figure:CayleyOfZ} for some examples. The only fact we will use about quasi-isometries is that these preserve ``large-scale properties'' of the graph, as for examples the number of ends.
 Observe that the requirement that both $S$ and $T$ are finite is crucial for the existence of a quasi-isometry between the corresponding Schreier graphs. Indeed, for every group  $\Cayley(G;G\setminus\{1\})=\Sch(G,\{1\};G\setminus\{1\})$ is always a complete graph on $\abs{G}$ vertices, in particular  $\Cayley(\Z;\{1\})$ and $\Cayley(\Z;\Z\setminus\{0\})$ are not quasi-isometric.
 
 %
@@ -82,11 +82,11 @@ Let $\Gamma$ be a graph and $K$ a finite subset of vertices. The graph $\Gamma\s
 \begin{defn}\label{Def:Ends}
 Let $\Gamma$ be a graph. The \emph{number of ends} of $\Gamma$ is the supremum, taken over all finite $K$, of the number of infinite connected components of $\Gamma\setminus K$.
 \end{defn}
-There exists other characterization of the number of ends in graphs, notably in terms of equivalence classes of rays see \cite{},\todo{put some reference} but Definition \ref{Def:Ends} is the one that best suits our purpose.
+There exists other characterization of the number of ends in graphs, notably in terms of equivalence classes of rays see \cite{Moller1995},\todo{put some reference} but Definition \ref{Def:Ends} is the one that best suits our purpose.
 A locally finite graph (i.e. every vertex has finite degree) is finite if and only if it has $0$ ends.
 
 An important fact about the number of ends of a graph, is that it is an invariant of quasi-isometry. In particular, if $G$ is a finitely generated group it is possible to speak about the number of ends of the Schreier graph $\Sch(G,H;S)$ without specifying a particular finite generating set $S$.
-While the number of ends of Cayley graphs of finitely generated groups can only be $0$, $1$, $2$ or infinite (in which case it is uncountable) \cite{}\todo{put ref}, Schreier graphs may have any number of ends in $\mathbf N\cup\{\infty\}$, see Figure \ref{Figure:SchreierOfF2}.\todo{Est-ce qu'on dit que tout graphe de degré pair est isomorphique à un Schreier ?}
+While the number of ends of Cayley graphs of finitely generated groups can only be $0$, $1$, $2$ or infinite (in which case it is uncountable) \cite[Theorem 11.27]{Stallings1971}, Schreier graphs may have any number of ends in $\mathbf N\cup\{\infty\}$, see Figure \ref{Figure:SchreierOfF2} and \cite{Leemann2020,Lubotzky2010}
 
 We are now finally able to introduce property FW.
 %
