--- a/Property FW and wreath products/Bouts/biblio.bib
+++ b/Property FW and wreath products/Bouts/biblio.bib
@@ -5,8 +5,59 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+@unpublished{LS2021,
+        AUTHOR = {Leemann, Paul-Henry and Schneeberger, Grégoire},
+         TITLE = {Groups acting with bounded orbits and wreath products},
+          YEAR = {In preparation}
+}
 
+@article {MR1967888,
+    AUTHOR = {Diestel, Reinhard and K\"{u}hn, Daniela},
+     TITLE = {Graph-theoretical versus topological ends of graphs},
+      NOTE = {Dedicated to Crispin St. J. A. Nash-Williams},
+   JOURNAL = {J. Combin. Theory Ser. B},
+  FJOURNAL = {Journal of Combinatorial Theory. Series B},
+    VOLUME = {87},
+      YEAR = {2003},
+    NUMBER = {1},
+     PAGES = {197--206},
+      ISSN = {0095-8956},
+   MRCLASS = {05C99 (54F50)},
+  MRNUMBER = {1967888},
+MRREVIEWER = {Jozef \v{S}ir\'{a}\v{n}},
+       DOI = {10.1016/S0095-8956(02)00034-5},
+       URL = {https://doi.org/10.1016/S0095-8956(02)00034-5},
+}
 
+@article {MR0450121,
+    AUTHOR = {Gross, Jonathan L.},
+     TITLE = {Every connected regular graph of even degree is a {S}chreier coset graph},
+   JOURNAL = {J. Combinatorial Theory Ser. B},
+  FJOURNAL = {Journal of Combinatorial Theory. Series B},
+    VOLUME = {22},
+      YEAR = {1977},
+    NUMBER = {3},
+     PAGES = {227--232},
+   MRCLASS = {05C25},
+  MRNUMBER = {0450121},
+MRREVIEWER = {A. T. White},
+}
+
+@incollection {MR1358635,
+    AUTHOR = {Lubotzky, Alexander},
+     TITLE = {Cayley graphs: eigenvalues, expanders and random walks},
+ BOOKTITLE = {Surveys in combinatorics, 1995 ({S}tirling)},
+    SERIES = {London Math. Soc. Lecture Note Ser.},
+    VOLUME = {218},
+     PAGES = {155--189},
+ PUBLISHER = {Cambridge Univ. Press, Cambridge},
+      YEAR = {1995},
+   MRCLASS = {05C25 (15A18 60J15 68R10)},
+  MRNUMBER = {1358635},
+MRREVIEWER = {Daniel Ashlock},
+       DOI = {10.1017/CBO9780511662096.008},
+       URL = {https://doi.org/10.1017/CBO9780511662096.008},
+}
 
 @article{Leemann2020,
 	abstract = {We prove that every connected locally finite regular graph has a double cover which is isomorphic to a Schreier graph.},
@@ -42,42 +93,36 @@ Reprint of the 1994 edition},
 	year = {2010},
 	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-0346-0332-4}}
 
-@book{Stallings1971,
-	annote = {A James K. Whittemore Lecture in Mathematics given at Yale
-University, 1969,
-Yale Mathematical Monographs, 4},
-	author = {Stallings, John},
-	date-added = {2021-01-06 19:40:50 +0100},
-	date-modified = {2021-01-06 19:40:50 +0100},
-	edition = {Yale Mathe},
-	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Stallings/Stallings - 1971 - Group theory and three-dimensional manifolds.pdf:pdf},
-	mendeley-groups = {Ends,Neuchatel},
-	pages = {v+65},
-	publisher = {Yale University Press, New Haven, Conn.-London},
-	title = {{Group theory and three-dimensional manifolds}},
-	year = {1971}}
+@book {Stallings1971,
+    AUTHOR = {Stallings, John},
+     TITLE = {Group theory and three-dimensional manifolds},
+      NOTE = {A James K. Whittemore Lecture in Mathematics given at Yale
+              University, 1969,
+              Yale Mathematical Monographs, 4},
+ PUBLISHER = {Yale University Press, New Haven, Conn.-London},
+      YEAR = {1971},
+     PAGES = {v+65},
+   MRCLASS = {57A10 (20E30)},
+  MRNUMBER = {0415622},
+MRREVIEWER = {Edward M. Bloomberg},
+}
 
-@article{Cornulier2011,
-	abstract = {We characterize permutational wreath products with Property (FA). For instance, we show that the standard wreath product A B of two non-trivial countable groups A and B has Property (FA) if and only if B has Property (FA) and A is a finitely generated group with finite abelianization. We also prove an analogous result for hereditary Property (FA). On the other hand, we prove that many wreath products with hereditary Property (FA) are not quotients of finitely presented groups with the same property. {\textcopyright} de Gruyter 2011.},
-	author = {Cornulier, Yves and Kar, Aditi},
-	date-added = {2020-10-31 18:22:14 +0100},
-	date-modified = {2020-10-31 18:22:14 +0100},
-	doi = {10.1515/JGT.2010.044},
-	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Cornulier, Kar/Cornulier, Kar - 2011 - On Property (FA) for wreath products.pdf:pdf},
-	issn = {14335883},
-	journal = {J. Gr. Theory},
-	keywords = {Algebra and Number Theory,Discrete Mathematics,Mathematics},
-	mendeley-groups = {Property{\_}FW{\_}and{\_}wreath{\_}product},
-	month = {jan},
-	number = {1},
-	pages = {165--174},
-	publisher = {De Gruyter},
-	title = {{On Property (FA) for wreath products}},
-	url = {https://www.degruyter.com/view/journals/jgth/14/1/article-p165.xml},
-	volume = {14},
-	year = {2011},
-	Bdsk-Url-1 = {https://www.degruyter.com/view/journals/jgth/14/1/article-p165.xml},
-	Bdsk-Url-2 = {https://doi.org/10.1515/JGT.2010.044}}
+@article {Cornulier2011,
+    AUTHOR = {Cornulier, Yves and Kar, Aditi},
+     TITLE = {On property ({FA}) for wreath products},
+   JOURNAL = {J. Group Theory},
+  FJOURNAL = {Journal of Group Theory},
+    VOLUME = {14},
+      YEAR = {2011},
+    NUMBER = {1},
+     PAGES = {165--174},
+      ISSN = {1433-5883},
+   MRCLASS = {20E22 (20E08 20F05)},
+  MRNUMBER = {2764930},
+MRREVIEWER = {Peter A. Linnell},
+       DOI = {10.1515/JGT.2010.044},
+       URL = {https://doi.org/10.1515/JGT.2010.044},
+}
 
 @book{Bekka2008,
 	author = {Bekka, Bachir and de la Harpe, Pierre and Valette, Alain},
@@ -113,92 +158,97 @@ Yale Mathematical Monographs, 4},
 	Bdsk-Url-1 = {http://doi.wiley.com/10.1002/jgt.3190080407},
 	Bdsk-Url-2 = {https://doi.org/10.1002/jgt.3190080407}}
 
-@article{Neuhauser2005a,
-	abstract = {Let H and be two discrete groups and X be a set on which acts. We investigate when the wreath product H X has relative property (T) and give a complete characterization of property (T) for such groups. Moreover we determine a lower bound of a Kazhdan constant for H X in terms of those for H and . Property ($\tau$) of H X is also discussed in some instances.},
-	author = {Neuhauser, Markus},
-	doi = {10.1007/s00209-005-0794-9},
-	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Neuhauser/Neuhauser - 2005 - Relative property (T) and related properties of wreath products.pdf:pdf},
-	issn = {00255874},
-	journal = {Math. Zeitschrift},
-	month = {sep},
-	number = {1},
-	pages = {167--177},
-	publisher = {Springer-Verlag},
-	title = {{Relative property (T) and related properties of wreath products}},
-	url = {http://link.springer.com/10.1007/s00209-005-0794-9},
-	volume = {251},
-	year = {2005},
-	Bdsk-Url-1 = {http://link.springer.com/10.1007/s00209-005-0794-9},
-	Bdsk-Url-2 = {https://doi.org/10.1007/s00209-005-0794-9}}
+@article {Neuhauser2005a,
+    AUTHOR = {Neuhauser, Markus},
+     TITLE = {Relative property ({T}) and related properties of wreath
+              products},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {251},
+      YEAR = {2005},
+    NUMBER = {1},
+     PAGES = {167--177},
+      ISSN = {0025-5874},
+   MRCLASS = {20E22 (20F69 22D10 43A35)},
+  MRNUMBER = {2176470},
+MRREVIEWER = {Alain Valette},
+       DOI = {10.1007/s00209-005-0794-9},
+       URL = {https://doi.org/10.1007/s00209-005-0794-9},
+}
 
-@article{Cornulier2013,
-	abstract = {We study commensurating actions of groups and the associated properties FW and PW, in connection with wallings, median graphs, CAT(0) cubings and multi-ended Schreier graphs.},
-	archiveprefix = {arXiv},
-	arxivid = {1302.5982},
-	author = {Cornulier, Yves},
-	eprint = {1302.5982},
-	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Cornulier/Cornulier - 2013 - Group actions with commensurated subsets, wallings and cubings.pdf:pdf},
-	pages = {58},
-	title = {{Group actions with commensurated subsets, wallings and cubings}},
-	url = {http://arxiv.org/abs/1302.5982},
-	year = {2013},
-	Bdsk-Url-1 = {http://arxiv.org/abs/1302.5982}}
+@ARTICLE{Cornulier2013,
+       author = {{Cornulier}, Yves},
+        title = "{Group actions with commensurated subsets, wallings and cubings}",
+      journal = {arXiv e-prints},
+     keywords = {Mathematics - Group Theory, Mathematics - Geometric Topology, Primary 20F65, Secondary 20B25, 05C12, 20B27, 20E22},
+         year = 2013,
+        month = feb,
+          eid = {arXiv:1302.5982},
+        pages = {arXiv:1302.5982},
+archivePrefix = {arXiv},
+       eprint = {1302.5982},
+ primaryClass = {math.GR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013arXiv1302.5982C}
+}
 
-@article{Cherix2004,
-	abstract = {We introduce the notion of a space with measured walls, generalizing the concept of a space with walls due to Haglund and Paulin (Simplicit{\'{e}} de groupes d'automorphismes d'espaces {\`{a}} courbure n{\'{e}}gative. Geom. Topol. Monograph 1 (1998), 181-248). We observe that if a locally compact group G acts properly on a space with measured walls, then G has the Haagerup property. We conjecture that the converse holds and we prove this conjecture for the following classes of groups: discrete groups with the Haagerup property, closed subgroups of SO(n, 1), groups acting properly on real trees, SL 2 (K) where K is a global field and amenable groups.},
-	author = {Cherix, Pierre Alain and Martin, Florian and Valette, Alain},
-	doi = {10.1017/S0143385704000185},
-	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Cherix, Martin, Valette/Cherix, Martin, Valette - 2004 - Spaces with measured walls, the Haagerup property and property (T).pdf:pdf},
-	issn = {01433857},
-	journal = {Ergod. Theory Dyn. Syst.},
-	month = {dec},
-	number = {6},
-	pages = {1895--1908},
-	publisher = {Cambridge University Press},
-	title = {{Spaces with measured walls, the Haagerup property and property (T)}},
-	url = {http://www.journals.cambridge.org/abstract{\_}S0143385704000185},
-	volume = {24},
-	year = {2004},
-	Bdsk-Url-1 = {http://www.journals.cambridge.org/abstract%7B%5C_%7DS0143385704000185},
-	Bdsk-Url-2 = {https://doi.org/10.1017/S0143385704000185}}
+@article {Cherix2004,
+    AUTHOR = {Cherix, Pierre-Alain and Martin, Florian and Valette, Alain},
+     TITLE = {Spaces with measured walls, the {H}aagerup property and
+              property ({T})},
+   JOURNAL = {Ergodic Theory Dynam. Systems},
+  FJOURNAL = {Ergodic Theory and Dynamical Systems},
+    VOLUME = {24},
+      YEAR = {2004},
+    NUMBER = {6},
+     PAGES = {1895--1908},
+      ISSN = {0143-3857},
+   MRCLASS = {22D05 (37A15)},
+  MRNUMBER = {2106770},
+MRREVIEWER = {A. Morimoto},
+       DOI = {10.1017/S0143385704000185},
+       URL = {https://doi.org/10.1017/S0143385704000185},
+}
 
-@book{Barnhill2008,
-	annote = {A gift to Guido Mislin on the occasion of his retirement from
-ETHZ June 2006,
-Collected by Indira Chatterji},
-	author = {Barnhill, Angela and Chatterji, INDIRA},
-	booktitle = {Guid. B. conjectures},
-	chapter = {9},
-	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/Barnhill, Chatterji/Barnhill, Chatterji - 2008 - Property (T) versus Property FW.pdf:pdf},
-	isbn = {2-940264-07-4},
-	publisher = {L'Enseignement Math{\'{e}}matique, Geneva},
-	series = {Monographies de L'Enseignement Math{\'{e}}matique [Monographs of L'Enseignement Math{\'{e}}matique]},
-	title = {{Property (T) versus Property FW}},
-	volume = {40},
-	year = {2008}}
+@article {Barnhill2008,
+	AUTHOR = {Barnhill, Angela and Chatterji, Indira},
+     TITLE = {Property ({T}) versus Property {FW}},
+   JOURNAL = {Enseign. Math. (2)},
+  FJOURNAL = {L'Enseignement Math\'{e}matique. Revue Internationale. 2e S\'{e}rie},
+    VOLUME = {54},
+      YEAR = {2008},
+    NUMBER = {1-2},
+     PAGES = {16--18},
+      ISSN = {0013-8584},
+   MRCLASS = {00A05 (00A07)},
+  MRNUMBER = {2454697},
+}
 
-@book{DelaHarpe2000,
-	author = {de la Harpe, Pierre},
-	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/de la Harpe/de la Harpe - 2000 - Topics in geometric group theory.pdf:pdf},
-	isbn = {0-226-31719-6; 0-226-31721-8},
-	mendeley-groups = {Books},
-	pages = {vi+310},
-	publisher = {University of Chicago Press, Chicago, IL},
-	series = {Chicago Lectures in Mathematics},
-	title = {{Topics in geometric group theory}},
-	year = {2000}}
+@book {DelaHarpe2000,
+    AUTHOR = {de la Harpe, Pierre},
+     TITLE = {Topics in geometric group theory},
+    SERIES = {Chicago Lectures in Mathematics},
+ PUBLISHER = {University of Chicago Press, Chicago, IL},
+      YEAR = {2000},
+     PAGES = {vi+310},
+      ISBN = {0-226-31719-6; 0-226-31721-8},
+   MRCLASS = {20F65 (20F69 57M07)},
+  MRNUMBER = {1786869},
+MRREVIEWER = {Lee Mosher},
+}
 
-@incollection{Moller1995,
-	author = {M{\"{o}}ller, R{\"{o}}gnvaldur G},
-	booktitle = {Groups '93 {\{}G{\}}alway/{\{}S{\}}t. {\{}A{\}}ndrews, {\{}V{\}}ol. 2},
-	doi = {10.1017/CBO9780511629297.011},
-	file = {:Users/gregoireschneeberger/Dropbox/Math/0{\_}Mendeley/M{\"{o}}ller/M{\"{o}}ller - 1995 - Groups acting on locally finite graphs---a survey of the infinitely ended case.pdf:pdf},
-	mendeley-groups = {Property{\_}FW{\_}and{\_}wreath{\_}product},
-	pages = {426--456},
-	publisher = {Cambridge Univ. Press, Cambridge},
-	series = {London Math. Soc. Lecture Note Ser.},
-	title = {{Groups acting on locally finite graphs---a survey of the infinitely ended case}},
-	url = {https://doi.org/10.1017/CBO9780511629297.011},
-	volume = {212},
-	year = {1995},
-	Bdsk-Url-1 = {https://doi.org/10.1017/CBO9780511629297.011}}
+@incollection {Moller1995,
+    AUTHOR = {M\"{o}ller, R\"{o}gnvaldur G.},
+     TITLE = {Groups acting on locally finite graphs---a survey of the
+              infinitely ended case},
+ BOOKTITLE = {Groups '93 {G}alway/{S}t. {A}ndrews, {V}ol. 2},
+    SERIES = {London Math. Soc. Lecture Note Ser.},
+    VOLUME = {212},
+     PAGES = {426--456},
+ PUBLISHER = {Cambridge Univ. Press, Cambridge},
+      YEAR = {1995},
+   MRCLASS = {05C25 (20B27)},
+  MRNUMBER = {1337287},
+MRREVIEWER = {S. C. Althoen},
+       DOI = {10.1017/CBO9780511629297.011},
+       URL = {https://doi.org/10.1017/CBO9780511629297.011},
+}
