--- a/Property FW and wreath products/Bouts/Introduction.tex
+++ b/Property FW and wreath products/Bouts/Introduction.tex
@@ -34,7 +34,7 @@ Let $G,H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$
 %
 %
 A somewhat similar result for property FA was obtained by Cornulier and Kar in \cite{Cornulier2011}.
-Cornulier also obtained partial results on wreath products and property FW in \cite{Cornulier2013}.
+Cornulier also proved in \cite{Cornulier2013} that if $G\wr_XH$ has property FW (and $G$ is non trivial), then $X$ is infinite.
 
 The aim of this note is to give an elementary proof of the analogous of Theorem~\ref{T:Wreath_prop_T} for property FW:
 %
@@ -44,7 +44,7 @@ Let $G,H$ be two finitely generated groups with $G$ non-trivial and $X$ a set on
 \end{thm}
 %
 %
-Our proof will rely on a characterization of property FW via ends of Schreier graphs \cite{Cornulier2013}, see Subsection \ref{Subsection:FW} for the relevant definitions.
+Our proof will rely on a characterization of property FW via ends of Schreier graphs, see Subsection \ref{Subsection:FW} for the relevant definitions.
 
 At his point, the curious reader might have two questions. First, is it possible to extend Theorem \ref{Thm:Main} beyond the realms of finitely generated groups and of actions with finitely many orbits? And secondly, is there a link between Theorems \ref{T:Wreath_prop_T} and \ref{Thm:Main}?
 In both cases, the answer is yes.
